# oernc_pi

./: .directory  .travis.yml  CMakeLists.txt  README  VERSION.cmake  appveyor.yml  changelog.tpl  crowdin.yaml  oernc-plugin.xml.in  publish.sh
.circleci/: config.yml
buildlinux/oeaserverd/: oeaserverd
buildlinux64/oeaserverd/: oeaserverd
buildlinuxarm/oeaserverd/: oeaserverd
buildosx/InstallOSX/: oernc_pi.pkgproj.in  ofc_pi.pkgproj.in  sgli
buildosx/oeaserverd/: oeaserverd
buildwin/oeaserverd/: .directory
ci/: appveyor-upload.sh  circleci-build-armhf.sh  circleci-build-macos.sh  circleci-upload.sh  travis-build-bionic-arm.sh  travis-build-debian.sh  travis-build-raspbian-armhf-buster.sh  travis-build-raspbian-armhf-stretch.sh  travis-build-raspbian-armhf.sh  travis-build-raspbian-buster-armhf.sh  travis-build-raspbian-stretch-armhf.sh  travis-build-xenial-armhf.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake  PluginSetup.cmake
debian/: changelog  control
flatpak/: .directory  README.md  oeaserverd  org.opencpn.OpenCPN.Plugin.oernc.yaml  org.opencpn.OpenCPN.Plugin.oesenc.yaml
manual/oernc/: antora.yml
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  oernc_pi.pot  ofc_pi.pot  ofc_pi.pot.bak  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: androidSupport.cpp  base64.c  chart.cpp  chart.h  ellipse.c  fpr.cpp  fpr.h  ochartShop.cpp  ochartShop.h  ocpn_plugin.h  oernc_inStream.cpp  oernc_inStream.h  oernc_pi.cpp  oernc_pi.h  ofcShop.cpp  ofcShop.h  piScreenLog.cpp  piScreenLog.h  sha256.h  validator.cpp  validator.h
src/wxcurl/: http.cpp
